--- a/user/sass/_variables.scss
+++ b/user/sass/_variables.scss
@@ -15,6 +15,7 @@ $grey: rgba(129, 129, 139, .2);
 $hover: rgba(74, 74, 80, 0.2);
 $subtext: #6E6E6E;
 $subtext1: rgba(255, 255, 255, 0.7);
+$subtext2: #9c9c9c;
 
 $white_color: #fff;
 $black_color: #000;
