--- a/user/sass/_coreds.scss
+++ b/user/sass/_coreds.scss
@@ -9,3 +9,22 @@
 body {
     background-color: black;
 }
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: $black;
+}
+
+::-webkit-scrollbar
+{
+	width: 6px;
+    border-radius: 10px;
+    
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: $subtext;
+    border-radius: 10px;
+}
