--- a/user/css/style.css
+++ b/user/css/style.css
@@ -3784,10 +3784,9 @@ body {
   background: none !important;
 }
 .feature_part .single_feature_slider {
-  background-image: url("../img/bg_1.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   margin-right: 10px;
   margin-left: 10px;
   padding: 30px;
