--- a/user/sass/_product_item.scss
+++ b/user/sass/_product_item.scss
@@ -40,6 +40,7 @@
         .product_category {
             margin: 0;
             a {
+                text-transform: capitalize;
                 font-size: 13px;
                 margin-bottom: 5px;
                 &:hover {
@@ -52,6 +53,7 @@
         .product_title {
             margin: 0;
             a {
+                text-transform: capitalize;
                 font-weight: 700;
                 font-size: 16px;
                 margin-bottom: 10px;
