--- a/user/sass/_product.scss
+++ b/user/sass/_product.scss
@@ -182,19 +182,100 @@
         flex-direction: row;
         gap: 10px;
 
-        &:hover {
-          label {
-            cursor: pointer;
-            width: 100%;
-            font-weight: 500;
-          }
-
-          font-weight: 500;
+        input[type="checkbox"] {
+          appearance: none; /* Remove default styling */
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          width: 20px;
+          height: 20px;
+          border: 2px solid #ccc;
+          border-radius: 3px;
+          background-color: white;
+          cursor: pointer;
+          position: relative;
+          box-sizing: border-box;
+          transition: background-color 0.3s, border-color 0.3s;
         }
+
+        input[type="checkbox"]:checked {
+            background-color: $black;
+            border-color: $black;
+        }
+
+        input[type="checkbox"]::before {
+            content: '';
+            position: absolute;
+            top: 0px;
+            left: 5px;
+            width: 6px;
+            height: 12px;
+            border: solid white;
+            border-width: 0 2px 2px 0;
+            transform: rotate(45deg);
+            display: none;
+            box-sizing: border-box;
+        }
+
+        input[type="checkbox"]:checked::before {
+            display: block;
+        }
+
+        input[type="checkbox"]:hover {
+            border-color: #888;
+        }
+
+        input[type="radio"] {
+          appearance: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          width: 20px;
+          height: 20px;
+          border: 2px solid #ccc;
+          border-radius: 50%;
+          outline: none;
+          cursor: pointer;
+          position: relative;
+        }
+        
+        /* Style the unchecked radio button */
+        input[type="radio"]::before {
+          content: '';
+          display: block;
+          width: 8px; /* Smaller width */
+          height: 8px; /* Smaller height */
+          border-radius: 50%;
+          background-color: #fff;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          transition: background 0.3s;
+        }
+        
+        /* Style the checked radio button */
+        input[type="radio"]:checked {
+            background-color: $black;
+            border: 2px solid $black; /* Change to your desired color */
+        }
+
+        input[type="radio"]:hover {
+          border-color: #888;
+        }
+      
+
+        label {
+          cursor: pointer;
+          &:hover {
+            font-weight: 700;
+          }
+        }
+
       }
     }
   }
 }
+
+
 
 .left_widgets {
   margin-bottom: 30px;
@@ -215,6 +296,7 @@
   @media #{$medium_device}{
   
   }
+  
 }
 
 .l_w_title {
@@ -416,29 +498,43 @@
       
       }
       span {
-        color: $primary-color;
+        color: $black;
+        font-weight: 700;
       }
     }
 
     h5 {
       font-size: 13px;
       font-weight: 500;
-      text-transform: capitalize;
       margin-bottom: 0;
     }
 
-    .nice-select {
-      height: 0;
-      border: 0px;
-      line-height: 15px;
-      font-weight: 300;
-
-      &:after {
-        margin-top: 0;
-        border-bottom: 1px solid #999;
-        border-right: 1px solid #999;
-        right: 0px;
+    .sort_select {
+			width: 120px;
+			height: 30px;
+			font-size: 13px;
+			line-height: 1.1;
+			padding: 5px 10px;
+			color: #4D4E50;
+			border: 1.5px solid $grey;
+			border-radius: 3px;
+			background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140"><polyline points="10,50 70,110 130,50" style="fill:none;stroke:%238B8C8F;stroke-width:15;stroke-linecap:round"/></svg>') no-repeat right 15px center;
+			background-size: 10px;
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			cursor: pointer;
+			margin: 0px;
+			box-sizing: border-box;
+			display: block;
+      &::-ms-expand {
+        display: none;
       }
+    }
+
+    .sort_select:focus {
+      outline: none;
+      border-color: $black;
     }
 
     .top_pageniation {
